# asimov-custom-assemblers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  custom_assembler.py  setup.py
.github/workflows/: cpp-app.yml  python-app.yml  test-app.yml
cpp/: CMakeLists.txt  CooMatrix.hpp  CsrMatrix.hpp  DOLFINX_CUASConfig.cmake.in  QuadratureRule.hpp  assemble.hpp  assembly.hpp  dolfinx_cuas.h  graph.py  kernels.hpp  kernels_non_const_coefficient.hpp  kernelwrapper.h  lagrange.cpp  lagrange.ufl  main.cpp  mass.c  mass.h  mass.ufl  math.hpp  matrix_assembly.hpp  out_template.txt  results.txt  run_lagrange.py  surface_kernels.hpp  utils.h  utils.hpp  vector_assembly.hpp  vector_kernels.hpp
cpp/contact/: CMakeLists.txt  Contact.hpp  NewContact.hpp  build_gap_function.hpp  contact_kernels.hpp
cpp/demo/: CMakeLists.txt  main.cpp  mass.ufl  problem.ufl
cpp/demo/contact_demo/: CMakeLists.txt  create_contact_meshes.py  main.cpp  problem.ufl  single_tetrahedron.py
cpp/demo/surface/: CMakeLists.txt  create_contact_meshes.py  main.cpp  problem.py
cpp/demo/volume/: CMakeLists.txt  README.md  main.cpp  volume.py  volume.ufl
python/: CMakeLists.txt  README.md  setup.py
python/demos/: coefficients_cpp.py  gap_function.py  mass_matrix.py  mwe.py  stiffness_matrix.py  surface_cpp_kernel.py  surface_hexadron.py  surface_hexahedron.py  surface_integral.py
python/dolfinx_assemblers/: __init__.py  custom_assembler.py  kernels.py  utils.py  verification.py
python/dolfinx_assemblers/contact/: build_gap_function.py
python/dolfinx_cuas/: __init__.py  array.h  caster_petsc.h  custom_assembler.py  kernels.py  kernelwrapper.h  nls.py  packing.py  utils.py  verification.py  wrappers.cpp
python/dolfinx_cuas/contact/: __init__.py  build_gap_function.py  wrappers.cpp
python/dolfinx_cuas/contact/tests/: test_contact_kernels.py
python/tests/: test_bcs.py  test_circumradius.py  test_coeff_kernels.py  test_coeffs.py  test_contact_kernels.py  test_cpp_kernels.py  test_kernels.py  test_mass_matrix.py  test_numba_kernels.py  test_stiffness_matrix.py  test_surface.py  test_vector_kernels.py  xtest_new_contact.py
